tests/NormalTests/paczka1/fuzzy1/98665344.err
Error in line 2: jvoqGsQ7 S656 40,6
Error in line 3: jvoqGsQ7 A988 91,2
Error in line 1: VnVYE2LXj S707 51,3
Error in line 5: jvoqGsQ7 S707 16,1
Error in line 6: GqiYL S656 91,2
Error in line 12: Evn5QHG15 S656 16,2
Error in line 11: GqiYL S707 92,7
Error in line 9: VnVYE2LXj S897 0,5
Error in line 26: Y1xbLXpf A988 42,9
Error in line 29: S897 A988 366,33
Error in line 38: /VnVYE2LXj
Error in line 33: S897 A988 30,4
